fix overflow drawer margin, small styling updates

--- a/privacyidea/static_new/src/app/components/token/token-enrollment/token-enrollment.component.scss
+++ b/privacyidea/static_new/src/app/components/token/token-enrollment/token-enrollment.component.scss
@@ -51,6 +51,10 @@ h5 {
   margin: 0 0 0 16px;
 }
 
+.width-47 {
+  width: 47%;
+}
+
 .wizard-top-div {
   margin-top: 16px;
 }
